--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bulma": "^0.8.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongoose": "^5.8.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
