--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   }
 }
